--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<header>
+<header [@row]="ready">
 	<h1>Teste de conhecimento</h1>
 	<figure>
 		<img src="assets/imagens/background/placa.png" alt="Placa teste de conhecimento">
