--- a/src/app/lose/lose.component.html
+++ b/src/app/lose/lose.component.html
@@ -1,6 +1,6 @@
-<section class="questao">
+<section class="questao" [@row]="ready">
 	<header>
-		<p class="finish">Continue tentando!</p>
+		<p class="finish">Você errou {{qtdErros}} de 5 questões  - Continue tentando!</p>
 	</header>
 
 	<article class="finish">
