--- a/src/app/win/win.component.html
+++ b/src/app/win/win.component.html
@@ -1,4 +1,4 @@
-<section class="questao">
+<section class="questao" [@row]="ready">
 	<header>
 		<p class="finish">Parabéns, você venceu!</p>
 	</header>
