--- a/src/assets/css/estilos.css
+++ b/src/assets/css/estilos.css
@@ -5,7 +5,9 @@
   src: local("Segoe UI"), url("fonts/segoeui.woff") format("woff"); }
 html {
   background: #f4f4f2;
-  border-top: 5px solid #ee4948; }
+  border-top: 5px solid #ee4948;
+  position: relative;
+  min-height: 100%; }
 
 body {
   font: normal 100% "Segoe UI"; }
@@ -26,6 +28,22 @@ header {
       display: block;
       margin: 0 auto;
       max-width: 100%; }
+
+button {
+  font-family: "Segoe Ui";
+  width: 100%;
+  font-size: 1.4rem;
+  padding: 0.8rem;
+  margin-bottom: 3.125rem;
+  border: 3px solid #ee4948;
+  color: #fff;
+  background: #ee4948;
+  cursor: pointer;
+  border-radius: 0.8rem; }
+
+button:disabled {
+  background: #ccc;
+  border: none; }
 
 main {
   max-width: 60rem;
@@ -118,42 +136,41 @@ main {
         justify-content: flex-end; }
         main .questao header .acoes a:hover, main .questao header a a:hover {
           text-decoration: underline; }
-  main .alternativas ul {
-    padding: 0;
-    display: flex;
-    flex-wrap: wrap;
-    margin-bottom: 3.125rem;
-    justify-content: space-between; }
-    main .alternativas ul li {
+  main .alternativas {
+    position: relative; }
+    main .alternativas ul {
+      padding: 0;
       display: flex;
-      align-items: center;
-      width: 15.4rem;
-      height: 4.4rem;
-      margin-bottom: 3.125rem;
-      background: url("../imagens/background/botoes.png") 100% 100% no-repeat; }
-      main .alternativas ul li input[type="checkbox"] {
-        margin-left: 1.9rem; }
-      main .alternativas ul li label {
-        padding: 1rem 9rem 1rem 0.5rem;
-        cursor: pointer;
-        font-size: 1.4rem;
-        color: #fff; }
-    main .alternativas ul li:hover {
-      -webkit-transform: scale(1.1);
-      -moz-transform: scale(1.1);
-      -o-transform: scale(1.1);
-      -ms-transform: scale(1.1);
-      transform: scale(1.1); }
-  main .alternativas button {
-    width: 100%;
-    font-size: 1.4rem;
-    padding: 0.8rem;
-    margin-bottom: 3.125rem;
-    border: 3px solid #ee4948;
-    color: #fff;
-    background: #ee4948;
-    cursor: pointer;
-    border-radius: 0.8rem; }
+      flex-wrap: wrap;
+      margin-bottom: 2.125rem;
+      justify-content: space-between; }
+      main .alternativas ul li {
+        display: flex;
+        align-items: center;
+        width: 15.4rem;
+        height: 4.4rem;
+        margin-bottom: 2.125rem;
+        background: url("../imagens/background/botoes.png") 100% 100% no-repeat; }
+        main .alternativas ul li input[type="checkbox"] {
+          margin-left: 1.9rem; }
+        main .alternativas ul li label {
+          padding: 1rem 9rem 1rem 0.5rem;
+          cursor: pointer;
+          font-size: 1.4rem;
+          color: #fff; }
+      main .alternativas ul li:hover {
+        -webkit-transform: scale(1.1);
+        -moz-transform: scale(1.1);
+        -o-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+        transform: scale(1.1); }
+    main .alternativas .mask {
+      width: 100%;
+      min-height: 100%;
+      background: #000;
+      opacity: 0.5;
+      border-radius: 2rem;
+      position: absolute; }
   main .inicio {
     font-size: 1.4rem;
     color: #ee4948;
@@ -170,8 +187,25 @@ main {
 
 footer {
   width: 100%;
+  position: absolute;
+  bottom: 0;
   color: #fff;
   text-align: center;
   background: #b33736; }
+
+.status-win, .status-lose {
+  text-align: center;
+  padding: 0.8rem 0;
+  margin-bottom: 1rem; }
+
+.status-win {
+  color: #3c763d;
+  background-color: #dff0d8;
+  border-color: #d6e9c6; }
+
+.status-lose {
+  color: #a94442;
+  background-color: #f2dede;
+  border-color: #ebccd1; }
 
 /*# sourceMappingURL=estilos.css.map */
